--- a/index.html
+++ b/index.html
@@ -48,46 +48,7 @@ const obj2 = {
     b: 2,
 };
 // console.log(obj2)
-var person = {
-    name: "张三",
-    age: 18
-};
-
-var proxy = new Proxy(person, {
-    get: function(target, property) {
-        // console.log('target：', target)
-        // console.log('property：', property)
-        if (property in target) {
-            return target[property];
-        } else {
-            throw new ReferenceError("Property \"" + property + "\" does not exist.");
-        }
-    }
-});
-// console.log(proxy.name) // "张三"
-// console.log(proxy.age) // 抛出一个错误
-
-function createArray(...elements) {
-    let handler = {
-        get(target, propKey, receiver) {
-            console.log('target：', target)
-            console.log('propKey', propKey)
-            console.log('receiver', receiver)
-            let index = Number(propKey);
-            if (index < 0) {
-                propKey = String(target.length + index);
-            }
-            return Reflect.get(target, propKey, receiver);
-        }
-    };
-
-    let target = [];
-    target.push(...elements);
-    return new Proxy(target, handler);
-}
-
-let arr = createArray('a', 'b', 'c');
-console.log("array", arr[-1]) // c
 </script>
-
+<script src="Proxy.js"></script>
+<script src="Reflect.js"></script>
 </html>
