--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@ const obj2 = {
 // console.log(obj2)
 </script>
 <script src="Proxy.js"></script>
-<script src="Reflect.js"></script>
+<script src="Array.js"></script>
+<!-- <script src="Reflect.js"></script> -->
 </html>
