--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@ const obj2 = {
 </script>
 <!-- <script src="Proxy.js"></script>
 <script src="Array.js"></script> -->
-<script src="Reflect.js"></script>
+<script src="Reflect.js" type="module" async></script>
 
 </html>
