--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <title></title>
 </head>
 <style type="text/css" media="screen">
-* {
-    margin: 0;
-}
-
-.bg {
-    width: 100%;
-    height: 360px;
-    background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
-    color: #fff;
-    text-align: center;
-    font-size: 36px;
-    line-height: 360px;
-}
+    * {
+        margin: 0;
+    }
+    
+    .bg {
+        width: 100%;
+        height: 360px;
+        background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+        color: #fff;
+        text-align: center;
+        font-size: 36px;
+        line-height: 360px;
+    }
 </style>
 
 <body>
@@ -26,36 +26,45 @@
     </div>
 </body>
 <script type="text/javascript">
-let test = (...data) => {
-    // console.log(data instanceof Array)
-    let obj = {};
-    // data.map(item => {
-    //  // console.log(typeof item)
-    //  obj[ typeof item ] = item;
-    // })
-    for (let item of data) {
-        obj[typeof item] = item;
+    let test = (...data) => {
+        // console.log(data instanceof Array)
+        let obj = {};
+        // data.map(item => {
+        //  // console.log(typeof item)
+        //  obj[ typeof item ] = item;
+        // })
+        for (let item of data) {
+            obj[typeof item] = item;
+        }
+        // console.log(obj)
+
     }
-    // console.log(obj)
 
-}
+    test(1, '2', ['lalal', 'isme'], true)
+    test('...', {
+        'token': '1111',
+        'user': 1111
+    })
 
-test(1, '2', ['lalal', 'isme'], true)
-test('...', {
-    'token': '1111',
-    'user': 1111
-})
-
-const obj2 = {
-    ...(0 > 1 ? {
-        a: 1
-    } : {}),
-    b: 2,
-};
-// console.log(obj2)
+    const obj2 = {
+        ...(0 > 1 ? {
+            a: 1
+        } : {}),
+        b: 2,
+    };
+    // let checkTime = (time) => {
+    //     if (time < 10) {
+    //         time = "0" + time
+    //     }
+    //     return time
+    // }
+    // console.log('校验时间', checkTime(2))
+    // console.log('校验时间', 00 > 0)
 </script>
 <!-- <script src="Proxy.js"></script>
 <script src="Array.js"></script> -->
-<script src="Reflect.js" type="module" async></script>
+<!-- <script src="Reflect.js" type="module" async></script> -->
+<script src="Promise.js"></script>
+
 
 </html>
