--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <title></title>
 </head>
 <style type="text/css" media="screen">
-    * {
-        margin: 0;
-    }
+* {
+    margin: 0;
+}
 
-    .bg {
-        width: 100%;
-        height: 360px;
-        background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
-        color: #fff;
-        text-align: center;
-        font-size: 36px;
-        line-height: 360px;
-    }
+.bg {
+    width: 100%;
+    height: 360px;
+    background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+    color: #fff;
+    text-align: center;
+    font-size: 36px;
+    line-height: 360px;
+}
 </style>
 
 <body>
@@ -34,83 +34,113 @@
 <script src="jquery.min.js" type="text/javascript"></script>
 <script src="count.js"></script>
 <script type="text/javascript">
-    let test = (...data) => {
-        // console.log(data instanceof Array)
-        let obj = {};
-        // data.map(item => {
-        //  // console.log(typeof item)
-        //  obj[ typeof item ] = item;
-        // })
-        for (let item of data) {
-            obj[typeof item] = item;
-        }
-        // console.log(obj)
-
-    }
-
-    test(1, '2', ['lalal', 'isme'], true)
-    test('...', {
-        'token': '1111',
-        'user': 1111
-    })
-
-    const obj2 = {
-        ...(0 > 1 ? {
-            a: 1
-        } : {}),
-        b: 2,
-    };
-    // let checkTime = (time) => {
-    //     if (time < 10) {
-    //         time = "0" + time
-    //     }
-    //     return time
-    // }
-    // console.log('校验时间', checkTime(2))
-    // console.log('校验时间', 00 > 0)
-    // let tody = new Date().getTime() / 1000;
-    // let online = tody + 86400 * 24;
-    // addTimer('dateShow1', online, 1, '', function(res) {
-    //     console.log('res', res)
-    //     if (res.time == 5) {}
-    // }, function(res) {
-    //     console.log(res, 'end1')
+let test = (...data) => {
+    // console.log(data instanceof Array)
+    let obj = {};
+    // data.map(item => {
+    //  // console.log(typeof item)
+    //  obj[ typeof item ] = item;
     // })
-    let str = {
-
+    for (let item of data) {
+        obj[typeof item] = item;
     }
-    let obg2url = (url, data) => {
-        let http = url;
-        let arr = [];
-        for (let i in data) {
-            let item = {}
-            item[i] = data[i];
-            arr.push(item)
+    // console.log(obj)
+
+}
+
+test(1, '2', ['lalal', 'isme'], true)
+test('...', {
+    'token': '1111',
+    'user': 1111
+})
+
+const obj2 = {
+    ...(0 > 1 ? {
+        a: 1
+    } : {}),
+    b: 2,
+};
+// let checkTime = (time) => {
+//     if (time < 10) {
+//         time = "0" + time
+//     }
+//     return time
+// }
+// console.log('校验时间', checkTime(2))
+// console.log('校验时间', 00 > 0)
+// let tody = new Date().getTime() / 1000;
+// let online = tody + 86400 * 24;
+// addTimer('dateShow1', online, 1, '', function(res) {
+//     console.log('res', res)
+//     if (res.time == 5) {}
+// }, function(res) {
+//     console.log(res, 'end1')
+// })
+let str = {
+
+}
+let obg2url = (url, data) => {
+    let http = url;
+    let arr = [];
+    for (let i in data) {
+        let item = {}
+        item[i] = data[i];
+        arr.push(item)
+    }
+    let objName, objNameItem, param, paramRes;
+    arr.map((item, index) => {
+        let flag = false;
+        // 取对象里面的key 
+        objName = Object.getOwnPropertyNames(item)[0];
+        param = item[objName];
+        if (typeof item[objName] === 'object') {
+            // 如果需要encodeURIComponent,取对象里面对象的 key
+            objNameItem = Object.getOwnPropertyNames(item[objName]);
+            objNameItem.includes('flag') ? flag = true : flag;
+            // console.log(encodeURIComponent(param[objNameItem[0]]))
+            param = encodeURIComponent(param[objNameItem[0]])
         }
-        let objName, objNameItem, param, paramRes;
-        arr.map((item, index) => {
-            let flag = false;
-            // 取对象里面的key 
-            objName = Object.getOwnPropertyNames(item)[0];
-            param = item[objName];
-            if (typeof item[objName] === 'object') {
-                // 如果需要encodeURIComponent,取对象里面对象的 key
-                objNameItem = Object.getOwnPropertyNames(item[objName]);
-                objNameItem.includes('flag') ? flag = true : flag;
-                // console.log(encodeURIComponent(param[objNameItem[0]]))
-                param = encodeURIComponent(param[objNameItem[0]])
-            }
-            if (index === 0) {
-                http += `?${objName}=${param}`
-            } else {
-                http += `&${objName}=${param}`
-            }
-        })
-        return http
-    }
+        if (index === 0) {
+            http += `?${objName}=${param}`
+        } else {
+            http += `&${objName}=${param}`
+        }
+    })
+    return http
+}
+
+$('span').click(function() {
+    console.log('我要点击')
+})
+
+setTimeout(function() {
+    for (var i = 0; i < 100000000; i++) {}
+    console.log('timer a');
+}, 0)
+
+for (var j = 0; j < 5; j++) {
+    console.log(j);
+}
+
+setTimeout(function() {
+    console.log('timer b');
+}, 0)
+
+function waitFiveSeconds() {
+    var now = (new Date()).getTime();
+    while (((new Date()).getTime() - now) < 5000) {}
+    console.log('finished waiting');
+}
+
+document.addEventListener('click', function() {
+    console.log('click');
+})
+
+console.log('click begin');
+waitFiveSeconds();
 
 
-    // console.log("obg2str", obg2str('www.baidu.com', str))
+// console.log("obg2str", obg2str('www.baidu.com', str))
 </script>
 <!-- <script src="Proxy.js"></script>
 <script src="Array.js"></script> -->
